--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/israelalagbe/CSS-Inliner/issues"
   },
-  "homepage": "https://github.com/israelalagbe/CSS-Inliner#readme"
+  "homepage": "https://github.com/israelalagbe/CSS-Inliner#readme",
+  "dependencies": {
+    "inline-css": "^2.4.1"
+  }
 }
