--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "css_inliner",
+  "name": "css-inliner",
   "version": "1.0.0",
-  "description": "A javascript library for inlining css code drirectly inside html file. It can search in other included css files in html and inline them",
+  "description": "A javascript library for inlining css code directly inside html file. It can search in other included css files in html and inline them",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "css-inliner": "./index.js"
   },
   "repository": {
     "type": "git",
