--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-inliner",
+  "name": "css-inline",
   "version": "1.0.0",
   "description": "A javascript library for inlining css code directly inside html file. It can search in other included css files in html and inline them",
   "main": "cli.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "css-inliner": "./cli.js"
+    "css-inline": "./cli.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,6 @@
   },
   "homepage": "https://github.com/israelalagbe/CSS-Inliner#readme",
   "dependencies": {
-    "inline-css": "^2.4.1"
+    "css-inliner": "^1.1.4"
   }
 }
