Made little changes to the base path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-inline",
+  "name": "css-inline-tool",
   "version": "1.0.0",
   "description": "A javascript library for inlining css code directly inside html file. It can search in other included css files in html and inline them",
   "main": "cli.js",
